sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:7: error: value toBouble is not a member of Int
      ecart=(ecart.toBouble/1.3).toInt
                   ^AlgCombSort:18: error: type mismatch;
 found   : Unit
 required: Boolean
  }while( (ecart > 1) | (inversement=true) )
                                    ^